Fix second button center issue on IOS

--- a/main.css
+++ b/main.css
@@ -83,6 +83,7 @@ p, label {
     border: none;
     color: #ffffff;
     background-color: #241e40;
+    text-align: center;
 }
 
 #logo {
